# PrecisionScaleController

./: .gitignore  CLAUDE.md  LearnedPatterns.md  README.md  ToDo.md  main.py  pyproject.toml
claude_test/: README.md  test_cal_and_read.py  test_read_id.py
src/entris_ii/: __init__.py  precision_scale_controller.py
